# pycon-2024

./: Dockerfile  Makefile  README.md  requirements.txt
add/: add.py
concat/: concat.c  concat_c.py
data/: coc.txt  lorem.txt  naatu.txt  question.txt
fancy-regex/: Cargo.toml  fancy_regex.h
fancy-regex/src/: lib.rs
fasttokenizer/: .gitignore  Readme.md  build.zig  build.zig.zon  pyproject.toml  sample.py  sample.txt
fasttokenizer/fasttokenizer/: __init__.py
fasttokenizer/py/: __init__.py
fasttokenizer/src/: asclib.zig  encoding.zig  lib.zig  model.zig  rank.zig  root.zig  utils.zig
fasttokenizer/test/: test_gpt2.zig
prime/: prime.c  prime_c.py  prime_py.py
scripts/: pure.py  tt.py  validate.py  zig.py
