[project]
name = "fasttokenizer"
version = "0.1.0"
authors = [{ name = "Akhil", email = "akhilsplendid@gmail.com" }]
description = "Tokenizer"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["fasttokenizer*"]

[tool.setuptools.package-data]
fasttokenizer = ["*.so"]


[build-system]
requires = ["setuptools >= 58.0"]
build-backend = "setuptools.build_meta"
